--- a/Modules.Seminar.Domain.Test/Module.Seminar.Domain.Test.csproj
+++ b/Modules.Seminar.Domain.Test/Module.Seminar.Domain.Test.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Fakes\" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="xunit" Version="2.9.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Modules.Seminar.Domain\Module.Seminar.Domain.csproj" />
   </ItemGroup>
 
 </Project>
