Added Enpoints CreateSeminar.cs & GetSeminarsByStudentId.cs

--- a/Module.Seminar/Module.Seminar.csproj
+++ b/Module.Seminar/Module.Seminar.csproj
@@ -7,8 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Endpoints\" />
     <Folder Include="Extensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Module.Seminar.Application\Module.Seminar.Application.csproj" />
+    <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App"/>
   </ItemGroup>
 
 </Project>
