--- a/Module.Seminar.Application/Module.Seminar.Application.csproj
+++ b/Module.Seminar.Application/Module.Seminar.Application.csproj
@@ -7,10 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstractions\" />
     <Folder Include="Extensions\" />
     <Folder Include="Features\Subject\Command\Dto\" />
     <Folder Include="Features\Subject\Query\Dto\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
+    <ProjectReference Include="..\Modules.Seminar.Domain\Module.Seminar.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
 </Project>
