Added TokenProvider.cs, PasswordHasher.cs and added commands and commandhandlers for Authenticate User and Sign up user

--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Secret": "Super-Duper-Great-Secret-That-No-One-Can-Guess-Yessirs",
+    "Issuer": "School.API",
+    "Audience": "EvaluatingApp.Web",
+    "ExpirationInDays": 7
+  }
 }
