--- a/Module.Authentication.Application/Module.Authentication.Application.csproj
+++ b/Module.Authentication.Application/Module.Authentication.Application.csproj
@@ -7,16 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Abstractions\" />
-      <Folder Include="Features\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="MediatR" Version="12.4.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Module.Authentication.Domain\Module.Authentication.Domain.csproj" />
+      <ProjectReference Include="..\Module.Shared.Domain\Module.Shared.Domain.csproj" />
     </ItemGroup>
 
 </Project>
