--- a/Module.User.Application/Module.User.Application.csproj
+++ b/Module.User.Application/Module.User.Application.csproj
@@ -11,12 +11,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Abstractions\" />
       <Folder Include="Extensions\" />
-      <Folder Include="Features\" />
+      <Folder Include="Features\UserManagement\Query\Dto\" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
       <ProjectReference Include="..\Module.User.Domain\Module.User.Domain.csproj" />
     </ItemGroup>
 
