Moved All Dto's from Semester and Class commands & queries to SharedKernel.Dto.csproj
Moved All Enums from Semester and Class to SharedKernel.Enums.csproj

--- a/Module.Semester.Application/Module.Semester.Application.csproj
+++ b/Module.Semester.Application/Module.Semester.Application.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
     <ProjectReference Include="..\Modules.Seminar.Domain\Module.Semester.Domain.csproj" />
+    <ProjectReference Include="..\SharedKernel.Dto\SharedKernel.Dto.csproj" />
   </ItemGroup>
 
   <ItemGroup>
