--- a/Module.User.Application/Module.User.Application.csproj
+++ b/Module.User.Application/Module.User.Application.csproj
@@ -8,16 +8,17 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="12.4.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Abstractions\" />
       <Folder Include="Extensions\" />
-      <Folder Include="Features\" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
       <ProjectReference Include="..\Module.User.Domain\Module.User.Domain.csproj" />
+      <ProjectReference Include="..\SharedKernel.Dto\SharedKernel.Dto.csproj" />
     </ItemGroup>
 
 </Project>
