SharedKernel.ValuesObjects created.
Semester i User.Domain er lavet.

--- a/Module.User.Domain/Module.User.Domain.csproj
+++ b/Module.User.Domain/Module.User.Domain.csproj
@@ -10,4 +10,9 @@
       <Folder Include="Enums\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SharedKernel.Enums\SharedKernel.Enums.csproj" />
+      <ProjectReference Include="..\SharedKernel.ValueObjects\SharedKernel.ValueObjects.csproj" />
+    </ItemGroup>
+
 </Project>
