--- a/Modules.Seminar.Domain/Module.Semester.Domain.csproj
+++ b/Modules.Seminar.Domain/Module.Semester.Domain.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SharedKernel.Enums\SharedKernel.Enums.csproj" />
+    <ProjectReference Include="..\SharedKernel.ValueObjects\SharedKernel.ValueObjects.csproj" />
   </ItemGroup>
 
 </Project>
