Moved authentication to User module

--- a/Module.Authentication.Application/Module.Authentication.Application.csproj
+++ b/Module.Authentication.Application/Module.Authentication.Application.csproj
@@ -16,4 +16,9 @@
       <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Abstractions\Repositories\" />
+      <Folder Include="Features\" />
+    </ItemGroup>
+
 </Project>
