--- a/Module.User.Domain.Test/Module.User.Domain.Test.csproj
+++ b/Module.User.Domain.Test/Module.User.Domain.Test.csproj
@@ -8,11 +8,15 @@
 
     <ItemGroup>
       <Folder Include="Fakes\" />
-      <Folder Include="Tests\" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Module.User.Domain\Module.User.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Moq" Version="4.20.72" />
+      <PackageReference Include="xunit" Version="2.9.2" />
     </ItemGroup>
 
 </Project>
