--- a/Module.Authentication.Domain.Test/Module.Authentication.Domain.Test.csproj
+++ b/Module.Authentication.Domain.Test/Module.Authentication.Domain.Test.csproj
@@ -7,10 +7,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Module.Authentication.Domain\Module.Authentication.Domain.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
       <PackageReference Include="Moq" Version="4.20.72" />
       <PackageReference Include="xunit" Version="2.9.2" />
@@ -18,6 +14,7 @@
 
     <ItemGroup>
       <Folder Include="Fakes\" />
+      <Folder Include="Tests\" />
     </ItemGroup>
 
 </Project>
