--- a/Module.User.Domain/Module.User.Domain.csproj
+++ b/Module.User.Domain/Module.User.Domain.csproj
@@ -15,4 +15,8 @@
       <ProjectReference Include="..\SharedKernel.ValueObjects\SharedKernel.ValueObjects.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+    </ItemGroup>
+
 </Project>
