--- a/Module.User/Module.User.csproj
+++ b/Module.User/Module.User.csproj
@@ -6,4 +6,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
+      <ProjectReference Include="..\Module.User.Application\Module.User.Application.csproj" />
+      <ProjectReference Include="..\SharedKernel.Dto\SharedKernel.Dto.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.4.1" />
+    </ItemGroup>
+
 </Project>
