Working on testing dbcontext

--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,8090;Database=EvalueringsApp;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=SA;Password=StrongPassword123."
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
