--- a/Module.User/Module.User.csproj
+++ b/Module.User/Module.User.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
       <ProjectReference Include="..\Module.User.Application\Module.User.Application.csproj" />
+      <ProjectReference Include="..\Module.User.Infrastructure\Module.User.Infrastructure.csproj" />
       <ProjectReference Include="..\SharedKernel.Dto\SharedKernel.Dto.csproj" />
     </ItemGroup>
 
