--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,23 @@
     build:
       context: .
       dockerfile: School.API/Dockerfile
+    networks:
+      - backend
+      
+  db:
+    image: mcr.microsoft.com/mssql/server:latest
+    volumes:
+      - C:\Dev\SQL\Evalueringsapp:/var/opt/mssql/data
+    environment:
+      ACCEPT_EULA: "Y"
+      SA_PASSWORD: "StrongPassword123."
+    ports:
+      - "8090:1433"
+    networks:
+      - backend
+        
+networks:
+  frontend:
+    driver: bridge
+  backend:
+    driver: bridge
