--- a/SharedKernel.Dto/SharedKernel.Dto.csproj
+++ b/SharedKernel.Dto/SharedKernel.Dto.csproj
@@ -11,4 +11,9 @@
       <ProjectReference Include="..\SharedKernel.Enums\SharedKernel.Enums.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\Subject\Command\" />
+      <Folder Include="Features\Subject\Query\" />
+    </ItemGroup>
+
 </Project>
