--- a/Module.Semester.Application/Module.Semester.Application.csproj
+++ b/Module.Semester.Application/Module.Semester.Application.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\Subject\Command\Dto\**" />
+    <EmbeddedResource Remove="Features\Subject\Command\Dto\**" />
+    <None Remove="Features\Subject\Command\Dto\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Extensions\" />
-    <Folder Include="Features\Subject\Command\Dto\" />
+    <Folder Include="Features\Subject\Command\" />
     <Folder Include="Features\Subject\Query\Dto\" />
   </ItemGroup>
 
