--- a/Module.Feedback.Domain/Module.Feedback.Domain.csproj
+++ b/Module.Feedback.Domain/Module.Feedback.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SharedKernel.ValueObjects\SharedKernel.ValueObjects.csproj" />
+    </ItemGroup>
+
 </Project>
