Added loads of Tests

--- a/Module.Feedback/Module.Feedback.csproj
+++ b/Module.Feedback/Module.Feedback.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Endpoints\Comment\" />
+      <Folder Include="Endpoints\Feedback\" />
+      <Folder Include="Endpoints\Vote\" />
+    </ItemGroup>
+
 </Project>
