Moved ITransactionalCommand.cs & IEndpoint.cs to SharedKernel.Interfaces

--- a/Module.Semester.Application/Module.Semester.Application.csproj
+++ b/Module.Semester.Application/Module.Semester.Application.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
     <ProjectReference Include="..\Modules.Seminar.Domain\Module.Semester.Domain.csproj" />
     <ProjectReference Include="..\SharedKernel.Dto\SharedKernel.Dto.csproj" />
+    <ProjectReference Include="..\SharedKernel.Interfaces\SharedKernel.Interfaces.csproj" />
   </ItemGroup>
 
   <ItemGroup>
