--- a/Module.User/Module.User.csproj
+++ b/Module.User/Module.User.csproj
@@ -11,6 +11,7 @@
       <ProjectReference Include="..\Module.User.Application\Module.User.Application.csproj" />
       <ProjectReference Include="..\Module.User.Infrastructure\Module.User.Infrastructure.csproj" />
       <ProjectReference Include="..\SharedKernel.Dto\SharedKernel.Dto.csproj" />
+      <ProjectReference Include="..\SharedKernel.Interfaces\SharedKernel.Interfaces.csproj" />
     </ItemGroup>
 
     <ItemGroup>
