--- a/Module.Feedback.Application/Module.Feedback.Application.csproj
+++ b/Module.Feedback.Application/Module.Feedback.Application.csproj
@@ -7,16 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Abstractions\" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Module.Feedback.Domain\Module.Feedback.Domain.csproj" />
       <ProjectReference Include="..\SharedKernel.Dto\SharedKernel.Dto.csproj" />
       <ProjectReference Include="..\SharedKernel.Interfaces\SharedKernel.Interfaces.csproj" />
+      <ProjectReference Include="..\SharedKernel.Models\SharedKernel.Models.csproj" />
     </ItemGroup>
 
 </Project>
