Functionality of refreshtokens is added

--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -13,6 +13,7 @@
     "Secret": "Super-Duper-Great-Secret-That-No-One-Can-Guess-Yessirs",
     "Issuer": "School.API",
     "Audience": "EvaluatingApp.Web",
-    "ExpirationInDays": 7
+    "AccessTokenExpirationInMinutes": 5,
+    "RefreshTokenExpirationInDays": 30
   }
 }
