Fixed Semester Module Entities and Their Configuration in Modelbuilder

--- a/School.API/School.API.csproj
+++ b/School.API/School.API.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Module.Semester\Module.Semester.csproj" />
       <ProjectReference Include="..\Module.Shared\Module.Shared.csproj" />
       <ProjectReference Include="..\Module.User\Module.User.csproj" />
       <ProjectReference Include="..\SharedKernel.Interfaces\SharedKernel.Interfaces.csproj" />
