Started on Vote Endpoints: CreateVote.cs [DONE], UpdateVote.cs [DONE], DeleteVote.cs [DONE], GetVotesByFeedbackId.cs [WIP]

--- a/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
+++ b/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
@@ -18,4 +18,8 @@
       <ProjectReference Include="..\Module.Feedback.Domain\Module.Feedback.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="QueryHandlers\Vote\" />
+    </ItemGroup>
+
 </Project>
