--- a/Module.Feedback.Domain/Module.Feedback.Domain.csproj
+++ b/Module.Feedback.Domain/Module.Feedback.Domain.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SharedKernel.Dto\SharedKernel.Dto.csproj" />
       <ProjectReference Include="..\SharedKernel.Enums\SharedKernel.Enums.csproj" />
       <ProjectReference Include="..\SharedKernel.ValueObjects\SharedKernel.ValueObjects.csproj" />
     </ItemGroup>
