--- a/Module.ExitSlips.Domain/Module.ExitSlip.Domain.csproj
+++ b/Module.ExitSlips.Domain/Module.ExitSlip.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SharedKernel.Enums\SharedKernel.Enums.csproj" />
+    <ProjectReference Include="..\SharedKernel.Models\SharedKernel.Models.csproj" />
     <ProjectReference Include="..\SharedKernel.ValueObjects\SharedKernel.ValueObjects.csproj" />
   </ItemGroup>
 
