--- a/Evaluering.API/Evaluering.API.csproj
+++ b/Evaluering.API/Evaluering.API.csproj
@@ -11,4 +11,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Module.Feedback.Domain\Module.Feedback.Domain.csproj" />
+      <ProjectReference Include="..\Module.Feedback\Module.Feedback.csproj" />
+    </ItemGroup>
+
 </Project>
