--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GeminiApiURL": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=AIzaSyDnr5mPDgrbHQ-6kYpgIA7QF1svwicGPWE"
 }
