--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,9 @@ networks:
     driver: bridge
   backend:
     driver: bridge
+
+  validation.api:
+    image: validation.api
+    build:
+      context: .
+      dockerfile: Validation.API/Dockerfile
