Extensions added to ExitSlip domain

--- a/SharedKernel.Dto/SharedKernel.Dto.csproj
+++ b/SharedKernel.Dto/SharedKernel.Dto.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\SharedKernel.Enums\SharedKernel.Enums.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\Evaluering\Question\Command\" />
+    </ItemGroup>
+
 </Project>
