Final Sprint 2 changes

--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "GeminiApiURL": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=AIzaSyDnr5mPDgrbHQ-6kYpgIA7QF1svwicGPWE"
+  "GeminiApiURL": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key="
 }
