--- a/SharedKernel.Dto/SharedKernel.Dto.csproj
+++ b/SharedKernel.Dto/SharedKernel.Dto.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Features\Evaluering\Answer\Command\" />
       <Folder Include="Features\Evaluering\Question\Command\" />
     </ItemGroup>
 
