--- a/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
+++ b/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
@@ -18,4 +18,10 @@
       <ProjectReference Include="..\Module.Feedback.Domain\Module.Feedback.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="SharedKernel.Dto">
+        <HintPath>..\SharedKernel.Dto\bin\Debug\net8.0\SharedKernel.Dto.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
