--- a/Module.Feedback/Module.Feedback.csproj
+++ b/Module.Feedback/Module.Feedback.csproj
@@ -17,4 +17,10 @@
       <PackageReference Include="MediatR" Version="12.4.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="SharedKernel.Dto">
+        <HintPath>..\SharedKernel.Dto\bin\Debug\net8.0\SharedKernel.Dto.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
