--- a/Module.Semester.Application/Module.Semester.Application.csproj
+++ b/Module.Semester.Application/Module.Semester.Application.csproj
@@ -29,4 +29,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="SharedKernel.Dto">
+      <HintPath>..\SharedKernel.Dto\bin\Debug\net8.0\SharedKernel.Dto.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
