--- a/Module.User.Infrastructure/Module.User.Infrastructure.csproj
+++ b/Module.User.Infrastructure/Module.User.Infrastructure.csproj
@@ -32,4 +32,10 @@
       <ProjectReference Include="..\Module.User.Domain\Module.User.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="SharedKernel.Dto">
+        <HintPath>..\SharedKernel.Dto\bin\Debug\net8.0\SharedKernel.Dto.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
