--- a/Module.Feedback.Application/Module.Feedback.Application.csproj
+++ b/Module.Feedback.Application/Module.Feedback.Application.csproj
@@ -19,4 +19,10 @@
       <ProjectReference Include="..\SharedKernel.Models\SharedKernel.Models.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="SharedKernel.Dto">
+        <HintPath>..\SharedKernel.Dto\bin\Debug\net8.0\SharedKernel.Dto.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
