--- a/Module.Feedback.Domain.Test/Module.Feedback.Domain.Test.csproj
+++ b/Module.Feedback.Domain.Test/Module.Feedback.Domain.Test.csproj
@@ -10,7 +10,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-<<<<<<< HEAD
         <PackageReference Include="coverlet.collector" Version="6.0.2">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,13 +20,11 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-=======
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
->>>>>>> origin/Sprint-2
     </ItemGroup>
 
     <ItemGroup>
@@ -47,6 +44,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Module.Feedback.Domain\Module.Feedback.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="SharedKernel.Dto">
+        <HintPath>..\SharedKernel.Dto\bin\Debug\net8.0\SharedKernel.Dto.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
