--- a/Module.Semester/Module.Semester.csproj
+++ b/Module.Semester/Module.Semester.csproj
@@ -20,4 +20,10 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="SharedKernel.Dto">
+      <HintPath>..\SharedKernel.Dto\bin\Debug\net8.0\SharedKernel.Dto.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
