--- a/Modules.Seminar.Infrastructure/Module.Semester.Infrastructure.csproj
+++ b/Modules.Seminar.Infrastructure/Module.Semester.Infrastructure.csproj
@@ -32,4 +32,10 @@
     <ProjectReference Include="..\Modules.Seminar.Domain\Module.Semester.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="SharedKernel.Dto">
+      <HintPath>..\SharedKernel.Dto\bin\Debug\net8.0\SharedKernel.Dto.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
