--- a/Evaluering.API/Evaluering.API.csproj
+++ b/Evaluering.API/Evaluering.API.csproj
@@ -2,13 +2,16 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <UserSecretsId>EvaluationSecrets</UserSecretsId>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
+        <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
