--- a/School.Domain.Test/School.Domain.Test.csproj
+++ b/School.Domain.Test/School.Domain.Test.csproj
@@ -1,22 +1,26 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="MSTest.Sdk/3.5.1">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <!--
+          Displays error on console in addition to the log file. Note that this feature comes with a performance impact.
+          For more information, visit https://learn.microsoft.com/dotnet/core/testing/unit-testing-platform-integration-dotnet-test#show-failure-per-test
+          -->
+        <TestingPlatformShowTestsFailure>true</TestingPlatformShowTestsFailure>
+        <RootNamespace>School.Domain.Test</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\School.API\School.API.csproj" />
+      <ProjectReference Include="..\School.Domain\School.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Moq" Version="4.20.72" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
       <PackageReference Include="xunit" Version="2.9.2" />
-      <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
     </ItemGroup>
 
 </Project>
