--- a/SharedKernel.Interfaces/SharedKernel.Interfaces.csproj
+++ b/SharedKernel.Interfaces/SharedKernel.Interfaces.csproj
@@ -10,4 +10,9 @@
         <FrameworkReference Include="Microsoft.AspNetCore.App"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.10" />
+    </ItemGroup>
+
 </Project>
