Configured Docker Compose to handle to databases and both API's [NOT TESTED]

--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,9090;Database=EvaluationApp;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=SA;Password=StrongPassword123."
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
