--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,8090;Database=EvalueringsApp;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=SA;Password=StrongPassword123."
+    "DefaultConnection": "Server=localhost,8090;Database=SchoolApp;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=SA;Password=StrongPassword123."
   },
   "Logging": {
     "LogLevel": {
