--- a/SharedKernel.Dto/SharedKernel.Dto.csproj
+++ b/SharedKernel.Dto/SharedKernel.Dto.csproj
@@ -13,12 +13,14 @@
 
     <ItemGroup>
       <Folder Include="Features\Evaluering\Answer\Command\" />
+      <Folder Include="Features\Evaluering\Comment\Query\" />
       <Folder Include="Features\Evaluering\Question\Command\" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Features\Evaluering\Answer\Command\" />
       <Folder Include="Features\Evaluering\Question\Command\" />
+      <Folder Include="Features\Evaluering\Vote\Query\" />
       <Folder Include="Features\School\" />
     </ItemGroup>
 
