Moved Routes to appsettings.json

--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -9,5 +9,35 @@
     }
   },
   "AllowedHosts": "*",
-  "GeminiApiURL": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key="
+  "GeminiApiURL": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=",
+  "Routes": {
+    "FeedbackModule": {
+      "Comment": {
+        "CreateComment": "/Room/Feedback/CreateComment",
+        "CreateSubComment": "/Room/Feedback/Comment/AddSubComment",
+        "GetSubComments": "/Room/Feedback/Comment/{commentId:guid}/SubComments"
+      },
+      "Feedback": {
+        "CreateFeedback": "/Room/CreateFeedback",
+        "DeleteFeedback": "/Room/Feedback",
+        "GetFeedbacksByClassIdOrderByCreatedDataTime": "/Rooms/Feedbacks/ForClass/{classId:guid}",
+        "GetFeedbacksByRoomId": "/Rooms/{roomId:guid}/Feedbacks"
+      },
+      "Room": {
+        "AddClassToRoom": "/Room/AddClass",
+        "CreateRoom": "/Room",
+        "DeleteRoom": "/Room",
+        "GetAllRoom": "/Rooms",
+        "GetRoomById": "/Room/{roomId:guid}",
+        "GetRoomsByClassId": "/Room/MyRooms/{classId:guid}",
+        "UpdateRoom": "/Room"
+      },
+      "Vote": {
+        "CreateVote": "/Room/Feedback/CreateVote",
+        "DeleteVote": "/Room/Feedback/Vote",
+        "GetVotesByFeedbackId": "/Room/Feedback/{feedbackId:guid}/Votes",
+        "UpdateVote": "/Room/Feedback/Vote"
+      }
+    }
+  }
 }
