--- a/Module.ExitSlips.Domain/Module.ExitSlip.Domain.csproj
+++ b/Module.ExitSlips.Domain/Module.ExitSlip.Domain.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\SharedKernel.ValueObjects\SharedKernel.ValueObjects.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
