--- a/Module.ExitSlips.Domain.Test/Module.ExitSlip.Domain.Test.csproj
+++ b/Module.ExitSlips.Domain.Test/Module.ExitSlip.Domain.Test.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Module.ExitSlips.Domain\Module.ExitSlip.Domain.csproj" />
+    <ProjectReference Include="..\SharedKernel.ValueObjects\SharedKernel.ValueObjects.csproj" />
+  </ItemGroup>
+
 </Project>
