--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -27,7 +27,7 @@
         "Signup": "Authentication/Signup"
       },
       "Bogus": {
-        "GenerateUserLoginBogus": "Bogus/GenerateUserLogins"
+        "GenerateSchoolDataBogus": "Bogus/GenerateSchoolData"
       },
       "User": {
         "GetUser": "/User/{userId:guid}",
