--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -27,7 +27,7 @@
         "AddClassToRoom": "/Room/AddClass",
         "CreateRoom": "/Room",
         "DeleteRoom": "/Room",
-        "GetAllRoom": "/Rooms",
+        "GetAllRoom": "/Room/GetAllRooms",
         "GetRoomById": "/Room/{roomId:guid}",
         "GetRoomsByClassId": "/Room/MyRooms/{classId:guid}",
         "UpdateRoom": "/Room"
