Added Endpoint RemoveClassIdFromRoom.cs [DONE], SubscribeToRoomNotification.cs [DONE], UnsubscribeFromRoomNotification.cs [DONE]

--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -30,6 +30,8 @@
         "GetAllRoom": "/Room/GetAllRooms",
         "GetRoomById": "/Room/{roomId:guid}",
         "GetRoomsByClassId": "/Room/MyRooms/{classId:guid}",
+        "RemoveClassIdFromRoom": "/Room/RemoveClass",
+        "SubscribeToRoomNotification": "/Room/SubscribeToRoom",
         "UpdateRoom": "/Room"
       },
       "Vote": {
