--- a/Module.ExitSlips/Module.ExitSlip.csproj
+++ b/Module.ExitSlips/Module.ExitSlip.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Endpoints\Exitslip\" />
+    <Folder Include="Endpoints\ExitSlip\" />
   </ItemGroup>
 
   <ItemGroup>
