Endpoints has now changed routes, so it gets from Config file

--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -39,5 +39,21 @@
         "UpdateVote": "/Room/Feedback/Vote"
       }
     }
+    "ExitSlipModule": {
+      "ExitSlip": {
+
+      }
+      "Question": {
+        "CreateQuestion": "/ExitSLip/Question",
+        "DeleteQuestion": "/ExitSLip/Question",
+        "GetQuestionsByExitSlipId": "/ExitSLip/Questions/{exitSlipId:guid}",
+        "UpdateQuestion": "/ExitSLip/Question"
+      }
+      "Answer": {
+        "CreateAnswer": "/ExitSLip/Question/Answer",
+        "GetAnswersByQuestionId": "/ExitSLip/Question/Answer/{questionId:guid}",
+        "UpdateAnswer": "/ExitSLip/Question/Answer"
+      }"
+    },}
   }
 }
