--- a/SharedKernel.Dto/SharedKernel.Dto.csproj
+++ b/SharedKernel.Dto/SharedKernel.Dto.csproj
@@ -24,4 +24,8 @@
       <Folder Include="Features\School\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Features\School\Authentication\Command\ResetPasswordRequest.cs" />
+    </ItemGroup>
+
 </Project>
