--- a/School.API/School.API.csproj
+++ b/School.API/School.API.csproj
@@ -37,4 +37,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Endpoints\UserEndpoints\Authentication\LoginResetPassword.cs" />
+    </ItemGroup>
+
 </Project>
