Change password made (Needs testing)

--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -20,7 +20,8 @@
     "UserModule": {
       "Authentication": {
         "AddAccountClaimToUser": "Authentication/AddClaimToUser",
-        "LoginChangePassword": "Authentication/ChangePassword",
+        "ResetPassword": "Authentication/ResetPassword",
+        "ChangePassword": "Authentication/ChangePassword",
         "RefreshToken": "Authentication/Refresh",
         "RequestResetPassword": "Authentication/RequestResetPassword",
         "Login": "Authentication/Login",
