Sign out and all authentication works. cannot test "ChangePassword" when logged in before IMapper is made

--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -25,7 +25,8 @@
         "RefreshToken": "Authentication/Refresh",
         "RequestResetPassword": "Authentication/RequestResetPassword",
         "Login": "Authentication/Login",
-        "Signup": "Authentication/Signup"
+        "Signup": "Authentication/Signup",
+        "SignOut": "Authentication/SignOut"
       },
       "Bogus": {
         "GenerateSchoolDataBogus": "Bogus/GenerateSchoolData"
