--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -18,20 +18,22 @@
         "GetSubComments": "/Room/Feedback/Comment/{commentId:guid}/SubComments"
       },
       "Feedback": {
+        "ChangeFeedbackStatus": "/Room/Feedback/ChangeStatus",
         "CreateFeedback": "/Room/CreateFeedback",
         "DeleteFeedback": "/Room/Feedback",
-        "GetFeedbacksByClassIdOrderByCreatedDataTime": "/Rooms/Feedbacks/ForClass/{classId:guid}",
+        "GetFeedbacksByClassIdOrderByCreatedDateTime": "/Rooms/Feedbacks/ForClass/{classId:guid}",
         "GetFeedbacksByRoomId": "/Rooms/{roomId:guid}/Feedbacks"
       },
       "Room": {
         "AddClassToRoom": "/Room/AddClass",
         "CreateRoom": "/Room",
         "DeleteRoom": "/Room",
-        "GetAllRoom": "/Room/GetAllRooms",
+        "GetAllRooms": "/Room/AllRooms",
         "GetRoomById": "/Room/{roomId:guid}",
         "GetRoomsByClassId": "/Room/MyRooms/{classId:guid}",
         "RemoveClassIdFromRoom": "/Room/RemoveClass",
         "SubscribeToRoomNotification": "/Room/SubscribeToRoom",
+        "UnsubscribeToRoomNotification": "/Room/UnsubscribeToRoom",
         "UpdateRoom": "/Room"
       },
       "Vote": {
@@ -40,22 +42,22 @@
         "GetVotesByFeedbackId": "/Room/Feedback/{feedbackId:guid}/Votes",
         "UpdateVote": "/Room/Feedback/Vote"
       }
-    }
+    },
     "ExitSlipModule": {
       "ExitSlip": {
 
-      }
+      },
       "Question": {
         "CreateQuestion": "/ExitSLip/Question",
         "DeleteQuestion": "/ExitSLip/Question",
         "GetQuestionsByExitSlipId": "/ExitSLip/Questions/{exitSlipId:guid}",
         "UpdateQuestion": "/ExitSLip/Question"
-      }
+      },
       "Answer": {
         "CreateAnswer": "/ExitSLip/Question/Answer",
         "GetAnswersByQuestionId": "/ExitSLip/Question/Answer/{questionId:guid}",
         "UpdateAnswer": "/ExitSLip/Question/Answer"
-      }"
-    },}
+      }
+    }
   }
 }
