--- a/Module.Feedback.Domain/Module.Feedback.Domain.csproj
+++ b/Module.Feedback.Domain/Module.Feedback.Domain.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\SharedKernel.Dto\SharedKernel.Dto.csproj" />
       <ProjectReference Include="..\SharedKernel.Enums\SharedKernel.Enums.csproj" />
       <ProjectReference Include="..\SharedKernel.ValueObjects\SharedKernel.ValueObjects.csproj" />
