--- a/School.Domain.Test/School.Domain.Test.csproj
+++ b/School.Domain.Test/School.Domain.Test.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
       <PackageReference Include="xunit" Version="2.9.2" />
