Working on custom policies

--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -58,8 +58,8 @@
       "Subject": {
         "CreateSubject": "/Semester/Class/AddSubject",
         "GetAllSubjects": "/Semester/Class/GetAllSubjects",
-        "GetSubject": "/Semester/Class/GetSubject/{id:guid}",
-        "GetSubjectsByClass": "/Semester/Class/GetSubjectsByClass/{id:guid}"
+        "GetSubject": "/Semester/Class/GetSubject/{subjectId:guid}",
+        "GetSubjectsByClass": "/Semester/Class/GetSubjectsByClass/{classId:guid}"
       }
     }
   }
