--- a/School.Domain.Test/School.Domain.Test.csproj
+++ b/School.Domain.Test/School.Domain.Test.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\School.Domain\School.Domain.csproj" />
+      <ProjectReference Include="..\School.Infrastructure\School.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
