--- a/Module.ExitSlip.Domain.Test/Module.ExitSlip.Domain.Test.csproj
+++ b/Module.ExitSlip.Domain.Test/Module.ExitSlip.Domain.Test.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
 
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
-  </PropertyGroup>
+		<IsPackable>false</IsPackable>
+		<IsTestProject>true</IsTestProject>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="coverlet.collector" Version="6.0.2">
@@ -23,6 +23,7 @@
 		<PackageReference Include="coverlet.collector" Version="6.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
 		<PackageReference Include="Moq" Version="4.20.72" />
+		<PackageReference Include="TngTech.ArchUnitNET.xUnit" Version="0.11.1" />
 		<PackageReference Include="xunit" Version="2.5.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
 	</ItemGroup>
@@ -40,13 +41,14 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<ProjectReference Include="..\Module.ExitSlips.Domain\Module.ExitSlip.Domain.csproj" />
+		<ProjectReference Include="..\Module.ExitSlips\Module.ExitSlip.csproj" />
 		<ProjectReference Include="..\SharedKernel.Enums\SharedKernel.Enums.csproj" />
 		<Using Include="Xunit" />
 	</ItemGroup>
 
 
 	<ItemGroup>
-    <Using Include="Xunit" />
-  </ItemGroup>
+		<Using Include="Xunit" />
+	</ItemGroup>
 
 </Project>
