--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -10,6 +10,9 @@
   },
   "AllowedHosts": "*",
   "GeminiApiURL": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=",
+  "SchoolApiURL": {
+    "GetEmailsByUserIds": "https://localhost:8080/User/GetEmailsByUserIds"
+  },
   "Routes": {
     "FeedbackModule": {
       "Comment": {
