Added GetEmailsByUserIds.cs endpoint

--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -32,8 +32,9 @@
         "GenerateSchoolDataBogus": "Bogus/GenerateSchoolData"
       },
       "User": {
-        "GetUser": "/User/{userId:guid}",
-        "GetUsers": "/User"
+        "GetUser": "/User/GetUser/{userId:guid}",
+        "GetUsers": "/User",
+        "GetEmailsByUserIds": "/User/GetEmailsByUserIds"
       }
     },
     "SemesterModule": {
