Last few things + some TODO's

--- a/Evaluation.Web/appsettings.json
+++ b/Evaluation.Web/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "HttpClientName": {
-  "EvaluationProxy": "EvaluationAPI"
-}
+  "Api": {
+    "EvaluationUrl": "http://localhost:8082",
+    "SchoolUrl": "http://localhost:8080"
+  }
 }
