Refactoring of ExitSlip done. Concurrency check done

--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -43,17 +43,29 @@
     }
     "ExitSlipModule": {
       "ExitSlip": {
+        "GetExitSlipWithAllAnswers": "/ExitSLip/Question/Answer/{exitSlipId:guid}",
+        "GetExitSlipWithAnswersForUser": "/ExitSLip/Question/Answer/{userId:guid}/{exitSlipId:guid}",
+
+        "GetExitSlipWithQuestions": "/ExitSlip/Question/{exitSlipId:guid}",
+
+        "GetExitSlipById": "/ExitSlip/{exitSlipId:guid}",
+        "GetAllExitSlipsForSubject": "/ExitSlips/SubjectExitSLips/{subjectId:guid}",
+        "GetAllExitSlipsForLecture": "/ExitSlips/LectureExitSlips/{lectureId:guid}",
+        "GetAllExitSlips": "/ExitSlip",
+
+        "CreateExitSlip": "/ExitSlip",
+        "UpdateExitSlip": "/ExitSlip",
+        "UpdateExitSlipActiveStatus": "/ExitSlip",
+        "DeleteExitSlip": "/ExitSlip"
 
       }
       "Question": {
         "CreateQuestion": "/ExitSLip/Question",
         "DeleteQuestion": "/ExitSLip/Question",
-        "GetQuestionsByExitSlipId": "/ExitSLip/Questions/{exitSlipId:guid}",
         "UpdateQuestion": "/ExitSLip/Question"
       }
       "Answer": {
         "CreateAnswer": "/ExitSLip/Question/Answer",
-        "GetAnswersByQuestionId": "/ExitSLip/Question/Answer/{questionId:guid}",
         "UpdateAnswer": "/ExitSLip/Question/Answer"
       }"
     },}
