Docker maybe ready

--- a/School.API/Dockerfile
+++ b/School.API/Dockerfile
@@ -8,9 +8,14 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["School.API/School.API.csproj", "School.API/"]
-COPY ["SharedKernel.Enums/SharedKernel.Enums.csproj", "SharedKernel.Enums/"]
-COPY ["SharedKernel.ValueObjects/SharedKernel.ValueObjects.csproj", "SharedKernel.ValueObjects/"]
+COPY ["School.Application/School.Application.csproj", "School.Application/"]
+COPY ["School.Domain/School.Domain.csproj", "School.Domain/"]
 COPY ["SharedKernel.Dto/SharedKernel.Dto.csproj", "SharedKernel.Dto/"]
+COPY ["SharedKernel.Enums/SharedKernel.Enums.csproj", "SharedKernel.Enums/"]
+COPY ["SharedKernel.Models/SharedKernel.Models.csproj", "SharedKernel.Models/"]
+COPY ["SharedKernel.ValueObjects/SharedKernel.ValueObjects.csproj", "SharedKernel.ValueObjects/"]
+COPY ["SharedKernel.Interfaces/SharedKernel.Interfaces.csproj", "SharedKernel.Interfaces/"]
+COPY ["School.Infrastructure/School.Infrastructure.csproj", "School.Infrastructure/"]
 RUN dotnet restore "School.API/School.API.csproj"
 COPY . .
 WORKDIR "/src/School.API"
