--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,8 @@
       context: .
       dockerfile: School.API/Dockerfile
     networks:
-      - evaluationDatabaseNetwork
-        
-  evaluation.api:
-    image: evaluation.api
-    build:
-      context: .
-      dockerfile: Evaluering.API/Dockerfile
-    networks:
-      - evaluationDatabaseNetwork
-      
+      - schoolNetwork 
+
   schooldb:
     image: mcr.microsoft.com/mssql/server:latest
     volumes:
@@ -25,6 +17,35 @@
     ports:
       - "8090:1433"
     networks:
+      - schoolNetwork
+      
+  reverseproxy.api:
+    image: reverseproxy.api
+    build:
+      context: .
+      dockerfile: ReverseProxy.API/Dockerfile
+    ports:
+      - "9000:9000"
+    environment:
+      ASPNETCORE_HTTP_PORTS: 9000
+    depends_on:
+      evaluation.api:
+        condition: service_started
+    networks:
+      - evaluationApiNetwork
+  
+  evaluation.api:
+    image: evaluation.api
+    build:
+      context: .
+      dockerfile: Evaluering.API/Dockerfile
+    depends_on:
+      evaluationdb:
+        condition: service_started
+      fakemailserver:
+        condition: service_started
+    networks:
+      - evaluationApiNetwork
       - evaluationDatabaseNetwork
   
   evaluationdb:
@@ -54,4 +75,6 @@ networks:
   evaluationApiNetwork:
     driver: bridge
   evaluationDatabaseNetwork:
+    driver: bridge
+  schoolNetwork:
     driver: bridge
