--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -64,7 +64,7 @@
         "GetAllExitSlips": "/ExitSlip",
         "CreateExitSlip": "/ExitSlip",
         "UpdateExitSlip": "/ExitSlip",
-        "UpdateExitSlipActiveStatus": "/ExitSlip",
+        "UpdateExitSlipActiveStatus": "/ExitSlip/ChangeActiveStatus",
         "DeleteExitSlip": "/ExitSlip"
       },
       "Question": {
