--- a/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
+++ b/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
@@ -19,4 +19,8 @@
         <ProjectReference Include="..\Module.Feedback.Domain\Module.Feedback.Domain.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
