--- a/ReverseProxy.API/appsettings.Development.json
+++ b/ReverseProxy.API/appsettings.Development.json
@@ -24,7 +24,7 @@
       "main-route-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http//:localhost:8082"
+            "Address": "http://evaluation.api:8082"
           }
         }
       }
