--- a/ReverseProxy.API/appsettings.json
+++ b/ReverseProxy.API/appsettings.json
@@ -20,11 +20,11 @@
         ]
       }
     },
-    "Clusters": {
+    "Clusters":{
       "main-route-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http//:localhost:8082"
+            "Address": "http://evaluation.api:8082"
           }
         }
       }
