--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@
     build:
       context: .
       dockerfile: School.API/Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      ASPNETCORE_HTTP_PORTS: 8080
     networks:
       - schoolNetwork
   
@@ -39,6 +43,10 @@
     build:
       context: .
       dockerfile: Evaluering.API/Dockerfile
+    ports:
+      - "8082:8082"
+    environment:
+      ASPNETCORE_HTTP_PORTS: 8082
     depends_on:
       evaluationdb:
         condition: service_started
