--- a/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
+++ b/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
@@ -10,6 +10,8 @@
         <PackageReference Include="AutoMapper" Version="13.0.1"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10"/>
+		
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"/>
         <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0"/>
     </ItemGroup>
