--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -51,6 +51,9 @@
         "DeleteVote": "/Room/Feedback/Vote",
         "GetVotesByFeedbackId": "/Room/Feedback/{feedbackId:guid}/Votes",
         "UpdateVote": "/Room/Feedback/Vote"
+      },
+      "Bogus": {
+        "GenerateFeedbackDataBogus": "Bogus/GenerateFeedbackData"
       }
     },
     "ExitSlipModule": {
