HVIS DU PULLER SÅ KAN DU KUN BRUGE DOCKER alt burde virke sådan nogellunde hvis du har gjort det rigtigt

--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,9090;Database=EvaluationApp;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=SA;Password=StrongPassword123."
+    "DefaultConnection": "Server=evaluationdb;Database=EvaluationApp;MultipleActiveResultSets=true;TrustServerCertificate=true;User Id=SA;Password=StrongPassword123."
   },
   "Logging": {
     "LogLevel": {
@@ -18,7 +18,7 @@
   },
   "GeminiApiURL": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=",
   "SchoolApiURL": {
-    "GetEmailsByUserIds": "https://localhost:8080/User/GetEmailsByUserIds"
+    "GetEmailsByUserIds": "http://school.api:8080/User/GetEmailsByUserIds"
   },
   "Routes": {
     "FeedbackModule": {
