--- a/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
+++ b/Module.Feedback.Infrastructure/Module.Feedback.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1"/>
+        <PackageReference Include="MailKit" Version="4.9.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"/>
