Push Push Push - I got so many changes!

--- a/Evaluering.API/appsettings.json
+++ b/Evaluering.API/appsettings.json
@@ -40,7 +40,7 @@
         "DeleteRoom": "/Room",
         "GetAllRooms": "/Room/AllRooms",
         "GetRoomById": "/Room/{roomId:guid}",
-        "GetRoomsByClassId": "/Room/MyRooms/{classId:guid}",
+        "GetRoomsByClassId": "/Room/MyRooms/{classId:Guid}",
         "RemoveClassIdFromRoom": "/Room/RemoveClass",
         "SubscribeToRoomNotification": "/Room/SubscribeToRoom",
         "UnsubscribeToRoomNotification": "/Room/UnsubscribeToRoom",
